[FIX] helpdesk: larger column witdh in dashboard
In the helpdesk dashboard, the width of kanban cards is fixed to
a larger value than the default one. As a consequence when this
view is grouped, the cards overflowed from their column.

Task 1878254

--- a/helpdesk/static/src/scss/helpdesk.scss
+++ b/helpdesk/static/src/scss/helpdesk.scss
@@ -1,8 +1,12 @@
 .o_kanban_view.o_kanban_dashboard.o_helpdesk_kanban {
     $sale-table-spacing: 10px;
+    $helpdesk-record-width: 420px;
 
+    .o_kanban_group {
+        width: $helpdesk-record-width + 2*$o-kanban-group-padding;
+    }
     .o_kanban_record {
-        width: 420px;
+        width: $helpdesk-record-width;
         min-height: 250px;
     }
 
